[package]
name = "cacheflow"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
remove-async-await = "1.0.1"
reqwest = {version = "0.12.4", features = ["json", "blocking"]}
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["fs"]}
